--- a/app/src/main/res/layout-land/activity_connexion.xml
+++ b/app/src/main/res/layout-land/activity_connexion.xml
@@ -120,8 +120,7 @@
                         android:layout_marginLeft="32dp"
                         android:background="@drawable/style_button"
                         android:fontFamily="@font/roboto_bold"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
+                        android:padding="5dp"
                         android:text="@string/connected_maj"
                         android:textColor="@color/white"
                         android:textSize="16sp" />
