--- a/app/src/main/res/layout-land/activity_start.xml
+++ b/app/src/main/res/layout-land/activity_start.xml
@@ -270,13 +270,14 @@
                     <Button
                         android:id="@+id/button_go"
                         android:layout_width="wrap_content"
-                        android:layout_height="30dp"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="right"
                         android:layout_marginBottom="8dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginRight="16dp"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/style_button"
+                        android:padding="5dp"
                         android:text="@string/go"
                         android:textColor="@color/white"
                         android:textSize="18sp"
