--- a/app/src/main/res/layout/custom_spinner_color.xml
+++ b/app/src/main/res/layout/custom_spinner_color.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/colorSlateGrey"
+    android:background="@drawable/style_button_white"
     android:orientation="horizontal">
 
     <ImageView
@@ -17,7 +17,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:padding="@dimen/activity_horizontal_margin"
+        android:padding="5dp"
         android:text="Nom de la couleur"
-        android:textColor="@color/white" />
+        android:textColor="@color/colorBlack"
+        android:textSize="18sp" />
 </LinearLayout>
