--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -40,7 +40,7 @@
                     android:id="@+id/scroll_timeline"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.8"
+                    android:layout_weight="0.2"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/constraint_video_record"/>
@@ -104,7 +104,7 @@
                 android:layout_marginTop="8dp"
                 android:text="@string/video_save"
                 android:textColor="@color/white"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 app:fontFamily="@font/roboto_bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -133,6 +133,19 @@
                     app:layout_constraintStart_toStartOf="parent" />
 
                 <Button
+                    android:id="@+id/btn_restart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="36dp"
+                    android:layout_marginStart="36dp"
+                    android:background="@null"
+                    android:padding="5dp"
+                    android:text="@string/restart_session"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:visibility="visible" />
+
+                <Button
                     android:id="@+id/btn_play"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -144,18 +157,7 @@
                     android:textColor="@color/white"
                     android:textSize="18sp" />
 
-                <Button
-                    android:id="@+id/btn_restart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="36dp"
-                    android:layout_marginStart="36dp"
-                    android:background="@drawable/style_button"
-                    android:padding="5dp"
-                    android:text="@string/restart_session"
-                    android:textColor="@color/white"
-                    android:textSize="18sp"
-                    android:visibility="visible" />
+
             </LinearLayout>
         </android.support.constraint.ConstraintLayout>
     </android.support.constraint.ConstraintLayout>
