--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -46,13 +46,13 @@
                     app:layout_constraintTop_toTopOf="@+id/constraint_video_record"/>
             </LinearLayout>
 
-            <ScrollView
+            <RelativeLayout
                 android:id="@+id/scroll_tagset"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.8">
 
-            </ScrollView>
+            </RelativeLayout>
 
         </LinearLayout>
 
