--- a/app/src/main/res/layout/fragment_tag_set.xml
+++ b/app/src/main/res/layout/fragment_tag_set.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="wrap_content"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:orientation="vertical"
@@ -8,10 +8,11 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/re_tags"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:scrollbars="vertical">
 
     </android.support.v7.widget.RecyclerView>
 </LinearLayout>
