--- a/app/src/main/res/layout/activity_play_video.xml
+++ b/app/src/main/res/layout/activity_play_video.xml
@@ -13,7 +13,7 @@
 
 
     <LinearLayout
-        android:id="@+id/scrollVideo"
+        android:id="@+id/linear_layoutVideo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.5"
@@ -24,9 +24,11 @@
             android:id="@+id/constraint_video_player"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="7"
+            android:layout_weight="6"
+            android:layout_gravity="center"
             android:visibility="visible"
             android:padding="8dp"
+
             >
 
         </android.support.constraint.ConstraintLayout>
@@ -36,7 +38,7 @@
             android:id="@+id/re_tags_selected"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="3"
+            android:layout_weight="4"
             android:padding="8dp" />
 
     </LinearLayout>
