--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -11,52 +11,50 @@
         android:id="@+id/appBar"
         layout="@layout/toolbar" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_marginTop="50dp">
+            android:layout_marginRight="5dp"
+            android:layout_weight="0.2"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.2"
-                android:orientation="vertical"
-                android:layout_marginRight="5dp">
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/constraint_video_record"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                android:layout_weight="0.8"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-                <android.support.constraint.ConstraintLayout
-                    android:layout_gravity="center"
-                    android:id="@+id/constraint_video_record"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="0.8"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                </android.support.constraint.ConstraintLayout>
-
-                <ScrollView
-                    android:id="@+id/scroll_timeline"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="0.2"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/constraint_video_record"/>
-            </LinearLayout>
+            </android.support.constraint.ConstraintLayout>
 
             <ScrollView
-                android:id="@+id/scroll_tagset"
+                android:id="@+id/scroll_timeline"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.8">
-
-            </ScrollView>
-
+                android:layout_height="0dp"
+                android:layout_weight="0.2"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/constraint_video_record" />
         </LinearLayout>
 
+        <RelativeLayout
+            android:id="@+id/scroll_tagset"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.8">
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
 
     <android.support.constraint.ConstraintLayout
