--- a/app/src/main/res/layout/fragment_video_player.xml
+++ b/app/src/main/res/layout/fragment_video_player.xml
@@ -2,13 +2,15 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent">
 
     <VideoView
         android:id="@+id/video_view_selected"
-        android:layout_width="0dp"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:foregroundGravity="center"
+        />
 
     <LinearLayout
         android:id="@+id/video_control"
