--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -43,29 +43,31 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_weight="7"
+                android:layout_weight="8"
                 android:gravity="center_vertical"
                 android:singleLine="false"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="17sp"
                 app:fontFamily="@font/roboto"
                 tools:text="@string/name_observation" />
 
             <TextView
                 android:id="@+id/tv_stats"
+                android:textSize="15sp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_gravity="center_vertical"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_weight="3"
+                android:layout_weight="2"
                 android:gravity="center_vertical"
                 android:textColor="@android:color/white"
                 android:visibility="visible"
                 app:fontFamily="@font/roboto"
                 tools:text="4"
+                android:textAlignment="textEnd"
                 tools:visibility="visible" />
 
             <ImageView
