--- a/app/src/main/res/layout/activity_play_video.xml
+++ b/app/src/main/res/layout/activity_play_video.xml
@@ -25,13 +25,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="6"
-            android:layout_gravity="center"
             android:visibility="visible"
-            android:padding="8dp"
+            android:padding="8dp"/>
 
-            >
 
-        </android.support.constraint.ConstraintLayout>
 
 
         <android.support.v7.widget.RecyclerView
