--- a/app/src/main/res/layout/activity_play_video.xml
+++ b/app/src/main/res/layout/activity_play_video.xml
@@ -16,7 +16,7 @@
         android:id="@+id/linear_layoutVideo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5"
+        android:layout_weight="0.7"
         android:weightSum="10">
 
 
@@ -28,7 +28,6 @@
             android:visibility="visible" />
 
 
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/re_tags_selected"
             android:layout_width="0dp"
@@ -38,20 +37,69 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/iv_arrow_size"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_gravity="right"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/caret_arrow_up" />
-    <ScrollView
-        android:id="@+id/scrollTimeline"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5" >
+        android:orientation="vertical"
+        android:layout_weight="0.3"
+        android:id="@+id/ll_info_progress">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/ll_progress_video">
 
-    </ScrollView>
+            <ImageView
+                android:id="@+id/iv_arrow_size"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="right"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/caret_arrow_up" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_position_seek"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="10dp"
+                    android:layout_weight="1"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/tv_end_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="10dp"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:textColor="@color/white" />
+            </LinearLayout>
+
+            <SeekBar
+                android:id="@+id/timer_seekbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="18"
+               />
+
+        </LinearLayout>
+
+        <ScrollView
+            android:id="@+id/scrollTimeline"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+        </ScrollView>
+    </LinearLayout>
+
 </LinearLayout>
 
 
