--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -43,16 +43,43 @@
                 android:layout_weight="0.2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/constraint_video_record" />
+                app:layout_constraintTop_toTopOf="@+id/constraint_video_record">
+
+
+            </ScrollView>
         </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/scroll_tagset"
+        <android.support.design.widget.CoordinatorLayout
+            android:id="@+id/recording_coordinator_viewer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="0.8">
 
-        </RelativeLayout>
+            <android.support.design.widget.AppBarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/mytabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg"
+                    app:tabGravity="fill"
+                    app:tabMode="fixed" />
+            </android.support.design.widget.AppBarLayout>
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/recording_view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.8"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            </android.support.v4.view.ViewPager>
+        </android.support.design.widget.CoordinatorLayout>
+
 
     </LinearLayout>
 
