--- a/app/src/main/res/layout/fragment_live_session.xml
+++ b/app/src/main/res/layout/fragment_live_session.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:paddingTop="15dp"
-        android:text="Lancement d'une session Live"
+        android:text="@string/start_live"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_weight="1"
-        android:text="Connexion : "
+        android:text="@string/off_on"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
