--- a/app/src/main/res/layout/fragment_cooperation.xml
+++ b/app/src/main/res/layout/fragment_cooperation.xml
@@ -35,4 +35,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
+    <TextView
+        android:id="@+id/tv_observer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/participants"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        app:layout_constraintTop_toBottomOf="@+id/switch_live_conexion" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_observer"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:paddingEnd="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_observer" />
+
 </android.support.constraint.ConstraintLayout>
