--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -2,19 +2,23 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/time_lines_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
-
-    <!--Timeline avec image tag-->
     <LinearLayout
-        android:id="@+id/ll_timeline_container"
+        android:id="@+id/time_lines_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
+
+        <!--Timeline avec image tag-->
+        <LinearLayout
+            android:id="@+id/ll_timeline_container_author"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"/>
+
+    </LinearLayout>
 
     <SeekBar
         android:id="@+id/seek_bar_selected"
@@ -33,5 +37,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </RelativeLayout>
